# Cyton-project

./: '''CMakeLists.txt  .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  parser.cy  report.md
cmake/: toolchain-clang22.cmake
example/: example3.cy  hello.cy  hello2.cy  hidden_main_demo.cy  main  zad1.cpp  zad1.cy  zad2.cpp  zad2.cy  zad3.cy  zad4.cy  zad5.cy  zad6.cy
src/: ast.cppm  interpreter.cpp  interpreter.cppm  lexer.cpp  lexer.cppm  main.cpp  parser.cpp  parser.cppm  semantic.cpp  semantic.cppm  token.cppm
